--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/dav3rid/bookish-bassoon/issues"
   },
-  "homepage": "https://github.com/dav3rid/bookish-bassoon#readme"
+  "homepage": "https://github.com/dav3rid/bookish-bassoon#readme",
+  "devDependencies": {
+    "eslint": "^7.32.0"
+  }
 }
